# microbricks

./: .gitignore  ARCHITECTURE.md  CODEOWNERS  CONTRIBUTING.md  HEALTHCARE_DATA_MODEL.md  LICENSE  LICENSE.md  Makefile  NOTICE  NOTICE.md  README.md  ROADMAP.md  SECURITY.md  databricks.yml  pyproject.toml
frontend/clinic-sim/: .gitignore  README.md  app.yml  package.json  pyproject.toml  tsconfig.json
frontend/clinic-sim/src/clinic_sim/: __init__.py  _metadata.py  auth.py
frontend/clinic-sim/src/clinic_sim/backend/: app.py  simulator.py
frontend/clinic-sim/src/clinic_sim/backend/core/: _defaults.py  _factory.py  _static.py  dependencies.py
frontend/clinic-sim/src/clinic_sim/backend/routers/: __init__.py  simulator.py
frontend/clinic-sim/src/clinic_sim/clients/: __init__.py  _base.py  appointment.py  billing.py  lab.py  patient.py  prescription.py  provider.py
frontend/clinic-sim/src/clinic_sim/ui/: index.html
frontend/clinic-sim/src/clinic_sim/ui/components/: clinic-floor.tsx  control-panel.tsx  person-avatar.tsx  stats-panel.tsx  timeline-panel.tsx
frontend/clinic-sim/src/clinic_sim/ui/lib/: api.ts  stream.ts
frontend/clinic-sim/src/clinic_sim/ui/routes/: __root.tsx  index.tsx
frontend/clinic-sim/src/clinic_sim/ui/styles/: globals.css
frontend/hc-portal/: .gitignore  README.md  app.yml  codegen.ts  package-lock.json  package.json  pyproject.toml  tsconfig.json
frontend/hc-portal/src/hc_portal/: _metadata.py  auth.py
frontend/hc-portal/src/hc_portal/backend/: app.py  router.py
frontend/hc-portal/src/hc_portal/backend/graphql/: context.py  queries.py  schema.py
frontend/hc-portal/src/hc_portal/backend/graphql/types/: __init__.py  alert.py  appointment.py  billing.py  billing_overview.py  common.py  dashboard.py  lab.py  patient.py  patient_summary.py  prescription.py  provider.py  timeline.py
frontend/hc-portal/src/hc_portal/backend/routers/: aggregations.py
frontend/hc-portal/src/hc_portal/clients/: __init__.py  _base.py  appointment.py  billing.py  lab.py  patient.py  prescription.py  provider.py
frontend/hc-portal/src/hc_portal/ui/: index.html  main.tsx
frontend/hc-portal/src/hc_portal/ui/components/: app-sidebar.tsx  pagination.tsx  patient-avatar.tsx  stat-card.tsx  status-badge.tsx
frontend/hc-portal/src/hc_portal/ui/components/apx/: logo.tsx
frontend/hc-portal/src/hc_portal/ui/components/ui/: select.tsx
frontend/hc-portal/src/hc_portal/ui/graphql/: appointments-list.graphql  dashboard-stats.graphql  patients-list.graphql
frontend/hc-portal/src/hc_portal/ui/hooks/: use-debounced-value.ts
frontend/hc-portal/src/hc_portal/ui/lib/: api.ts  bff.ts  formatters.ts
frontend/hc-portal/src/hc_portal/ui/lib/graphql/: client.ts  operations.ts
frontend/hc-portal/src/hc_portal/ui/routes/: __root.tsx  _dashboard.tsx  index.tsx
frontend/hc-portal/src/hc_portal/ui/routes/_dashboard/: index.tsx
frontend/hc-portal/src/hc_portal/ui/routes/_dashboard/alerts/: index.tsx
frontend/hc-portal/src/hc_portal/ui/routes/patients/: $id.tsx  index.tsx
frontend/hc-portal/src/hc_portal/ui/styles/: globals.css
frontend/hc-portal/src/hc_portal/ui/types/: routeTree.gen.ts
frontend/hc-portal/tests/: conftest.py
frontend/hc-portal/tests/integration/: test_bff.py
frontend/hc-portal/tests/unit/: test_app_imports.py  test_base_url_resolution.py  test_dashboard_stats.py  test_graphql.py  test_list_pagination.py  test_patient_summary.py
frontend/microbricks-deck/: .gitignore  README.md  app.yml  package.json  pyproject.toml  tsconfig.json  vite.config.ts
frontend/microbricks-deck/.apx/: uvicorn_logging.json
frontend/microbricks-deck/src/microbricks_deck/: __init__.py  _metadata.py
frontend/microbricks-deck/src/microbricks_deck/backend/: router.py
frontend/microbricks-deck/src/microbricks_deck/backend/core/: __init__.py  _base.py  _config.py  _factory.py  _static.py
frontend/microbricks-deck/src/microbricks_deck/ui/: index.html  main.tsx
frontend/microbricks-deck/src/microbricks_deck/ui/components/diagrams/: cicd-pipeline.tsx  service-topology.tsx
frontend/microbricks-deck/src/microbricks_deck/ui/components/navigation/: top-nav.tsx
frontend/microbricks-deck/src/microbricks_deck/ui/hooks/: use-active-section.ts
frontend/microbricks-deck/src/microbricks_deck/ui/lib/: api.ts  content.ts
frontend/microbricks-deck/src/microbricks_deck/ui/routes/: index.tsx
frontend/microbricks-deck/src/microbricks_deck/ui/styles/: globals.css
services/patient/: .gitignore  README.md  app.yaml  pyproject.toml
services/patient/migrations/versions/: 0001_initial_patient_schema.py
services/patient/seed/: seed.py
services/patient/src/patient/: app.py  db.py
services/patient/src/patient/graphql/: context.py  mutations.py  queries.py  schema.py  types.py
services/patient/src/patient/routers/: addresses.py  patients.py
services/patient/tests/: conftest.py
services/patient/tests/integration/: test_obo.py
services/patient/tests/unit/: test_models.py
services/prescription/: .gitignore  README.md  app.yaml  pyproject.toml
services/prescription/migrations/: env.py
services/prescription/migrations/versions/: 0001_initial_prescription_schema.py
services/prescription/seed/: seed.py
services/prescription/src/prescription/: app.py
services/prescription/src/prescription/graphql/: mutations.py  queries.py  types.py
services/prescription/src/prescription/routers/: prescriptions.py
services/prescription/tests/: conftest.py
services/prescription/tests/integration/: test_obo.py
services/prescription/tests/unit/: test_models.py
services/provider/: .gitignore  README.md  app.yaml  pyproject.toml
services/provider/migrations/versions/: 0001_initial_provider_schema.py
services/provider/seed/: seed.py
services/provider/src/provider/: __init__.py  app.py  auth.py
services/provider/src/provider/graphql/: mutations.py  queries.py  types.py
services/provider/src/provider/routers/: providers.py
services/provider/tests/: conftest.py
services/provider/tests/integration/: test_obo.py
services/provider/tests/unit/: test_models.py
(+137 files in other folders)
