[project]
name = "clinic-sim"
dynamic = ["version"]
description = "Clinic patient-journey simulator: animated UI that fans out to all six backend services and exercises their CRUD endpoints end-to-end."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.119.0",
    "pydantic-settings>=2.11.0",
    "uvicorn>=0.37.0",
    "databricks-sdk>=0.74.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "ty>=0.0.12",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.1",
]

[tool.apx.metadata]
app-name = "clinic-sim"
app-slug = "clinic_sim"
app-entrypoint = "clinic_sim.backend.app:app"
api-prefix = "/api"
metadata-path = "src/clinic_sim/_metadata.py"

[tool.apx.ui]
root = "src/clinic_sim/ui"

[tool.apx.ui.registries]
"@animate-ui" = "https://animate-ui.com/r/{name}.json"
"@ai-elements" = "https://registry.ai-sdk.dev/{name}.json"
"@svgl" = "https://svgl.app/r/{name}.json"

[tool.uv]
# Same shape as hc-portal: standalone (non-workspace) uv project, `package = false`
# so `uv sync` installs deps but doesn't try to wheel-build the local source —
# Databricks Apps runs uvicorn directly against `src/` (PYTHONPATH=src in app.yml).
package = false

[build-system]
requires = ["hatchling", "uv-dynamic-versioning>=0.7.0"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
vcs = "git"
fallback-version = "0.0.0"

[tool.hatch.build.hooks.version]
path = "src/clinic_sim/_version.py"
template = '''
version = "{version}"
'''

[tool.hatch.build]
artifacts = ["src/clinic_sim/__dist__", "src/clinic_sim/_metadata.py"]
exclude = ["src/clinic_sim/ui"]

[tool.hatch.build.targets.wheel]
packages = ["src/clinic_sim"]

[tool.hatch.build.targets.editable]
packages = ["src/clinic_sim"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]
markers = [
    "integration: integration tests requiring deployed preview apps",
]
